fixed div heights for blog body on small screens

--- a/components/Body/BlogLeft/leftBottom.module.css
+++ b/components/Body/BlogLeft/leftBottom.module.css
@@ -21,7 +21,7 @@
   margin: 0;
   padding: 0; 
   overflow: hidden;
-  height: calc(7 * var(--lh));
+  height: calc(10 * var(--lh));
 }
 .LbBlogBodyDiv p {
   margin: 0;
