--- a/components/Body/BlogRight/rightBottom.module.css
+++ b/components/Body/BlogRight/rightBottom.module.css
@@ -21,7 +21,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  height: calc(7 * var(--lh));
+  height: calc(10 * var(--lh));
 }
 .RbBlogBodyDiv p {
   margin: 0;
